--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: swift
-osx_image: xcode9
+osx_image: xcode10
 script:
-- xcodebuild -workspace LaunchScreenSnapshot.xcworkspace -scheme Example -destination "platform=iOS Simulator,name=iPhone 7,OS=11.0" -configuration Debug -enableCodeCoverage YES clean build test
+- xcodebuild -workspace LaunchScreenSnapshot.xcworkspace -scheme Example -destination "platform=iOS Simulator,name=iPhone XS,OS=12.0" -configuration Debug -enableCodeCoverage YES clean build test
 after_success:
 - bash <(curl -s https://codecov.io/bash)
